[package]
name = "typid"
version = "1.1.2"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "(Typ)ed Unique (Id)entifiers"
license = "MIT"
homepage = "https://github.com/PsichiX/typid"
repository = "https://github.com/PsichiX/typid"
documentation = "https://docs.rs/typid"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.13", features = ["serde", "v4", "js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "1.13", features = ["serde", "v4"] }
